# eflash

./: .gitignore  ARCHITECTURE_FIX_FINAL_REPORT.md  BUGFIX_REPORT.md  BUGFIX_ROUND_20260603.md  BUG_ANALYSIS_RECOVERY.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_CORRECTNESS_ANALYSIS.md  CODE_REGION_TEST_SUMMARY.md  DEBUGGING_IN_VISUAL_STUDIO.md  DESIGN_OVERVIEW.md  EFLASH_COMPARISON_ANALYSIS.md  EFLASH_COMPARISON_CHARTS.md  EFLASH_COMPARISON_EXECUTIVE_SUMMARY.md  EFLASH_COMPARISON_README.md  EFLASH_COMPARISON_VISUALIZATION.md  FAST_RECOVERY_COMPARISON.md  FINAL_FIX_REPORT.md  FIX_SUMMARY.md  LICENSE  Makefile  README  README.md  README_VS2022.md  REPO_WIKI.md  SIM_FLASH_README.md  SUPERBLOCK_JOURNAL_IMPLEMENTATION.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_COMPREHENSIVE_REPORT.md  TEST_COVERAGE_DETAILED_ANALYSIS.md  TEST_COVERAGE_SUPPLEMENT_SUMMARY.md  TEST_REPORT.md  TEST_SUMMARY.md  TEST_SUMMARY_REPORT.md  build_vs2022.bat  debug3.txt  debug4.txt  debug_output.txt  dhara.slnf  (+22 more)
.github/workflows/: tests.yml
build_vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_tests.vcxproj  all_tests.vcxproj.filters  bch_test.vcxproj  bch_test.vcxproj.filters  cmake_install.cmake  crc32_test.vcxproj  crc32_test.vcxproj.filters  crc_poly_demo.vcxproj  crc_poly_demo.vcxproj.filters  dhara.sln  dhara_lib.vcxproj  dhara_lib.vcxproj.filters  ecc_lib.vcxproj  ecc_lib.vcxproj.filters  eflash_ftl_lib.vcxproj  eflash_ftl_lib.vcxproj.filters  eflash_ftl_tests.vcxproj  eflash_ftl_tests.vcxproj.filters  epoch_roll_test.vcxproj  epoch_roll_test.vcxproj.filters  error_test.vcxproj  error_test.vcxproj.filters  flash_sim_demo.vcxproj  flash_sim_demo.vcxproj.filters  flash_with_dhara.vcxproj  flash_with_dhara.vcxproj.filters  gentab.vcxproj  gentab.vcxproj.filters  gftool.vcxproj  gftool.vcxproj.filters  hamming_test.vcxproj  hamming_test.vcxproj.filters  (+16 more)
build_vs2022/Debug/: dhara_lib.lib  ecc_lib.lib
build_vs2022/Release/: dhara_lib.lib  ecc_lib.lib  eflash_ftl_lib.lib
build_vs2022/Testing/Temporary/: CTestCostData.txt
build_vs2022/all_tests.dir/Debug/: all_tests.exe.recipe
build_vs2022/all_tests.dir/Debug/all_tests.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs2022/all_tests.dir/Release/: all_tests.exe.recipe
build_vs2022/all_tests.dir/Release/all_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs2022/bch_test.dir/Debug/: bch_test.test.recipe
build_vs2022/bch_test.dir/Debug/bch_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs2022/bch_test.dir/Release/: bch_test.test.recipe
build_vs2022/bch_test.dir/Release/bch_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs2022/crc32_test.dir/Debug/: crc32_test.test.recipe
build_vs2022/crc32_test.dir/Debug/crc32_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
build_vs2022/crc32_test.dir/Release/: crc32_test.test.recipe
build_vs2022/crc_poly_demo.dir/Release/: crc_poly_demo.exe.recipe
build_vs2022/ecc_lib.dir/Release/: ecc_lib.lib.recipe
build_vs2022/eflash_ftl_tests.dir/Release/: eflash_ftl_tests.exe.recipe
build_vs2022/epoch_roll_test.dir/Debug/: epoch_roll_test.test.recipe
build_vs2022/epoch_roll_test.dir/Release/: epoch_roll_test.test.recipe
build_vs2022/error_test.dir/Debug/: error_test.test.recipe
build_vs2022/error_test.dir/Release/: error_test.test.recipe
build_vs2022/flash_sim_demo.dir/Debug/: flash_sim_demo.exe.recipe
build_vs2022/flash_sim_demo.dir/Release/: flash_sim_demo.exe.recipe
build_vs2022/flash_with_dhara.dir/Debug/: flash_with_dhara.exe.recipe
build_vs2022/flash_with_dhara.dir/Release/: flash_with_dhara.exe.recipe
build_vs2022/gentab.dir/Debug/: gentab.exe.recipe
build_vs2022/gentab.dir/Release/: gentab.exe.recipe
build_vs2022/gftool.dir/Debug/: gftool.exe.recipe
build_vs2022/gftool.dir/Release/: gftool.exe.recipe
build_vs2022/hamming_test.dir/Debug/: hamming_test.test.recipe
build_vs2022/hamming_test.dir/Release/: hamming_test.test.recipe
build_vs2022/jfill_test.dir/Debug/: jfill_test.test.recipe
build_vs2022/jfill_test.dir/Release/: jfill_test.test.recipe
build_vs2022/journal_test.dir/Debug/: journal_test.test.recipe
build_vs2022/journal_test.dir/Release/: journal_test.test.recipe
build_vs2022/map_test.dir/Debug/: map_test.test.recipe
build_vs2022/map_test.dir/Release/: map_test.test.recipe
build_vs2022/nand_test.dir/Debug/: nand_test.test.recipe
build_vs2022/nand_test.dir/Release/: nand_test.test.recipe
build_vs2022/recovery_test.dir/Debug/: recovery_test.test.recipe
build_vs2022/recovery_test.dir/Release/: recovery_test.test.recipe
build_vs2022/test_dhara_on_file_flash.dir/Debug/: test_dhara_on_file_flash.exe.recipe
build_vs2022/test_dhara_on_file_flash.dir/Release/: test_dhara_on_file_flash.exe.recipe
build_vs2022/test_gentab.dir/Release/: test_gentab.exe.recipe
dhara/: config.h  journal.c  map.c
ecc/: bch.c  bch.h  gf13.c  gf13.h
eflash_ftl/: API_DESIGN.md  DEBUG_GUIDE.md  Google C++ Style Guide.md  README_TESTS.md  debug_test.c  eflash.h  eflash_ftl.c  eflash_ftl.h  eflash_ftl_tests.c  eflash_ftl_tests_code_region.c  eflash_ftl_tests_extension.c  eflash_ftl_tests_stability.c  eflash_ftl_visual.c  eflash_mgr.c  eflash_mgr.h  eflash_sim.c  eflash_sim.h  example_simple.c  main.c  mini_ftl.c  mini_ftl.h  space_mgr.c  space_mgr.h
examples/: flash_with_dhara.c  test_dhara_on_file_flash.c
tests/: all_tests.c  eflash_ftl_tests.c  epoch_roll.c  jfill.c  journal.c  jtutil.c  map.c  nand.c  recovery.c  sim.c  test_gentab.c  util.c
tools/: crc_poly_demo.c  gentab.c  gftool.c
(+255 files in other folders)
